fixed squashed seq column & width for #deleted

--- a/src/fauxton/app/addons/documents/assets/less/documents.less
+++ b/src/fauxton/app/addons/documents/assets/less/documents.less
@@ -85,7 +85,7 @@ button.beautify {
     width: 50%;
   }
 
-  #seq, #deleted {
-    width: 5%;
+  #deleted {
+    width: 5em;
   }
 }
